# simple-package

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  test_build.yml
simple-package/: .gitignore  pyproject.toml
src/functions/: __init__.py
