[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-package"
version = "0.0.5"
authors = [
    { name="Anmol Kapoor", email="akapoor202@ucsb.edu" }
]
description = "A simple package"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    'numpy >= 1.12'
]

[project.optional-dependencies]
tests = [
  'pytest'
]

[project.urls]
"Homepage" = "https://github.com/Gopu2001/simple-package"
"Bug Tracker" = "https://github.com/Gopu2001/simple-package/issues"
