[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-package"
authors = [
    { name="Anmol Kapoor", email="akapoor202@ucsb.edu" }
]
description = "A simple package"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ['version', 'dependencies']
classifiers = [
    'Programming Language :: Python :: 3'
]

[project.optional-dependencies]
tests = [
  'pytest'
]

[project.urls]
"Homepage" = "https://github.com/Gopu2001/simple-package"
"Bug Tracker" = "https://github.com/Gopu2001/simple-package/issues"

[tool.setuptools.dynamic]
version = {attr = "functions.__VERSION__"}
dependencies = { file = ['requirements.txt'] }

[tool.distutils.bdist_wheel]
universal = true
